--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="SAFE RIDE MOTORS "
+      content="Your Reliable Neighborhood Mechanic with 20+ Years of Experience"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>F30 Grillz Toronto - Buy BMW Grills &amp; BMW Accessories Online</title>
+    <title>SAFE RIDE MOTORS - Your Reliable Neighborhood Mechanic with 20+ Years of Experience</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
